# formatforge

./: Cargo.toml  LICENSE  Readme.md
src/: lib.rs  main.rs
src/formats/: cbor.rs  env.rs  ini.rs  json.rs  json5.rs  jsonc.rs  kdl.rs  mod.rs  msgpack.rs  toml.rs  xml.rs  yaml.rs
